--- a/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
@@ -11,7 +11,11 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">בית</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    
+                    <a href="/"><img src="/images/logo.png" width="68" height="68" alt="דף הבית" /></a>
+
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
