--- a/WebApplication2/WebApplication2/Views/Users/Edit.cshtml
+++ b/WebApplication2/WebApplication2/Views/Users/Edit.cshtml
@@ -23,11 +23,11 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control"></select>
-                <span asp-validation-for="Type" class="text-danger"></span>
-            </div>
+			<div class="form-group">
+				<label asp-for="Type" class="control-label"></label>
+				<input asp-for="Type" class="form-control" hidden/>
+				<span asp-validation-for="Type" class="text-danger"></span>
+			</div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
