--- a/WebApplication2/WebApplication2/Views/Categories/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Index.cshtml
@@ -55,6 +55,9 @@
         margin-left: 50px;
         margin-bottom: 50px;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .category {
@@ -108,7 +111,6 @@
 	}
 
     .action-buttons {
-        position: absolute;
         margin-top: 7px;
     }
 </style>
