--- a/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
@@ -6,6 +6,11 @@
     <title>@ViewData["Title"] - WebApplication2</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <style>
+        * {
+             text-align: right;
+        }
+    </style>
 </head>
 <body>
     <header>
