--- a/WebApplication2/WebApplication2/Views/Users/Edit.cshtml
+++ b/WebApplication2/WebApplication2/Views/Users/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>עריכה</h1>
 
-<h4>User</h4>
+<h4>משתמש</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,21 +23,29 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-			<div class="form-group">
-				<label asp-for="Type" class="control-label"></label>
-				<input asp-for="Type" class="form-control" hidden/>
-				<span asp-validation-for="Type" class="text-danger"></span>
-			</div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group action-buttons">
+                <input type="submit" value="שמור" class="btn btn-primary save" />
+                <div>
+                    <a class="btn btn-secondary" asp-action="Index">ביטול</a>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
+<style>
+    * {
+        text-align: right;
+    }
+    .action-buttons {
+        display: flex;
+    }
+    .save {
+        margin-left: 10px;
+    }
+</style>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
