--- a/WebApplication2/WebApplication2/Views/Categories/Delete.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Delete.cshtml
@@ -19,7 +19,7 @@
         </div>
         <form class="form-delete" asp-action="Delete">
             <input type="hidden" asp-for="CategoryId" />
-            <input type="submit" value="מחיקה" class="btn btn-danger delete" />
+            <input type="submit" value="מחק" class="btn btn-danger delete" />
             <a asp-action="Index" class="btn btn-secondary">ביטול</a>
         </form>
     </div>
