--- a/WebApplication2/WebApplication2/Views/Users/Delete.cshtml
+++ b/WebApplication2/WebApplication2/Views/Users/Delete.cshtml
@@ -4,36 +4,48 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>מחיקה</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>האם אתה בטוח שברצונך למחוק את המשתמש הזה?</h3>
 <div>
-    <h4>User</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <div class="user">
+        <div class="user-detailes">
+            <div>
+                <span class="description">@Html.DisplayNameFor(model => model.Name)</span>:
+                <span>@Html.DisplayFor(model => model.Name)</span>
+            </div>
+            <div>
+                <span class="description">@Html.DisplayNameFor(model => model.Password)</span>:
+                <span>@Html.DisplayFor(model => model.Password)</span>
+            </div>
+            <div>
+                <span class="description">@Html.DisplayNameFor(model => model.Type)</span>:
+                <span>
+                    @if (@Model.Type == TypeUser.admin)
+                    {
+                        <span>מנהל</span>
+                    }
+                    else
+                    {
+                        <span>לקוח</span>
+                    }
+                </span>
+            </div>
+        </div>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="מחק" class="btn btn-danger delete" />
+            <a asp-action="Index" class="btn btn-secondary">ביטול</a>
+        </form>
+    </div>
 </div>
+<style>
+    .delete {
+        margin-left: 10px;
+    }
+    .user {
+        font-size: 20px;
+        font-weight: 500;
+    }
+</style>
